--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="light_blue_900">#FF01579B</color>
     <color name="dark_background_color">#252526</color>
     <color name="very_dark_background_color">#1E1E1E</color>
+    <color name="splash_dark_background">#191D24</color>
 </resources>
